force-app/main/default/objects/Grantee_Report__c/fields/Youth_Completed_Program__c.field-meta.xml
<CustomField>
    <fullName>Youth_Completed_Program__c</fullName>
    <label>Youth Completed Program</label>
    <length>11</length>
    <type>Text</type>
</CustomField>