force-app/main/default/objects/Grantee_Report__c/fields/Youth_Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Youth_Completion_Percent__c</fullName>
    <formula
  >VALUE(Youth_Completed_Program__c) / VALUE(Youth_Exited_Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Youth Completion Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>