force-app/main/default/objects/Grantee_Report__c/fields/Youth_Development_Park__c.field-meta.xml
<CustomField>
    <fullName>Youth_Development_Park__c</fullName>
    <formula>Grant__r.Youth_Development_Park__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Youth Development Park</label>
    <type>Checkbox</type>
</CustomField>