force-app/main/default/objects/Grantee_Report__c/fields/Youth_Development_Park_Name__c.field-meta.xml
<CustomField>
    <fullName>Youth_Development_Park_Name__c</fullName>
    <label>Youth Development Park Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>