force-app/main/default/objects/Grantee_Report__c/fields/Youth_Experienced_Non_Violent_Victim__c.field-meta.xml
<CustomField>
    <fullName>Youth_Experienced_Non_Violent_Victim__c</fullName>
    <label>Youth Experienced Non-Violent Victim.</label>
    <length>3</length>
    <type>Text</type>
</CustomField>