force-app/main/default/objects/Grantee_Report__c/fields/Youth_Experienced_Violent_Victimization__c.field-meta.xml
<CustomField>
    <fullName>Youth_Experienced_Violent_Victimization__c</fullName>
    <label>Youth Experienced Violent Victimization</label>
    <length>3</length>
    <type>Text</type>
</CustomField>