force-app/main/default/objects/Grantee_Report__c/fields/Youth_Identified_Both_Labor_Sex_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Youth_Identified_Both_Labor_Sex_Traffic__c</fullName>
    <label>Youth Identified Both Labor Sex Traffic</label>
    <length>3</length>
    <type>Text</type>
</CustomField>