force-app/main/default/objects/Grantee_Report__c/fields/Youth_Identified_Labor_Trafficking__c.field-meta.xml
<CustomField>
    <fullName>Youth_Identified_Labor_Trafficking__c</fullName>
    <label>Youth Identified Labor Trafficking</label>
    <length>3</length>
    <type>Text</type>
</CustomField>