force-app/main/default/objects/Grantee_Report__c/fields/Youth_Identified_Sex_Trafficking_Victim__c.field-meta.xml
<CustomField>
    <fullName>Youth_Identified_Sex_Trafficking_Victim__c</fullName>
    <label>Youth Identified Sex Trafficking Victim</label>
    <length>3</length>
    <type>Text</type>
</CustomField>