force-app/main/default/objects/Grantee_Report__c/fields/Youth_Identify_as_Native_American__c.field-meta.xml
<CustomField>
    <fullName>Youth_Identify_as_Native_American__c</fullName>
    <label>Youth Identify as Native American</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>