force-app/main/default/objects/Grantee_Report__c/fields/Youth_Increased_Social_Support_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Youth_Increased_Social_Support_Long_Term__c</fullName>
    <label>Youth Increased Social Support Long Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>