force-app/main/default/objects/Grantee_Report__c/fields/Youth_Participated_In_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Youth_Participated_In_Graduation__c</fullName>
    <label>Youth Participated In Graduation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>