force-app/main/default/objects/Grantee_Report__c/fields/Youth_Received_Additional_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Youth_Received_Additional_Sentence__c</fullName>
    <label>Youth Received Additional Sentence</label>
    <length>11</length>
    <type>Text</type>
</CustomField>