force-app/main/default/objects/Grantee_Report__c/fields/Youth_Recommitted_to_Juvenile_Facility__c.field-meta.xml
<CustomField>
    <fullName>Youth_Recommitted_to_Juvenile_Facility__c</fullName>
    <label>Youth Recommitted to Juvenile Facility</label>
    <length>11</length>
    <type>Text</type>
</CustomField>