force-app/main/default/objects/Grantee_Report__c/fields/Youth_Sentenced_to_Adult_Prison__c.field-meta.xml
<CustomField>
    <fullName>Youth_Sentenced_to_Adult_Prison__c</fullName>
    <label>Youth Sentenced to Adult Prison</label>
    <length>11</length>
    <type>Text</type>
</CustomField>