force-app/main/default/objects/Grantee_Report__c/fields/Youth_Served_via_Evidence_Based_Program__c.field-meta.xml
<CustomField>
    <fullName>Youth_Served_via_Evidence_Based_Program__c</fullName>
    <label>Youth Served via Evidence-Based Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>