force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Delinquent_Offenses__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Delinquent_Offenses__c</fullName>
    <label>Youth with Delinquent Offenses</label>
    <length>11</length>
    <type>Text</type>
</CustomField>