force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Improved_Attendance_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Improved_Attendance_Long_Term__c</fullName>
    <label>Youth with Improved Attendance Long Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>