force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Incarcerate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Incarcerate_Parent__c</fullName>
    <label>Youth with Incarcerated Parent</label>
    <length>11</length>
    <type>Text</type>
</CustomField>