force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Increased_School_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Increased_School_Attendance__c</fullName>
    <label>Youth with Increased School Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>