force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Increased_Social_Support__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Increased_Social_Support__c</fullName>
    <label>Youth with Increased Social Support</label>
    <length>11</length>
    <type>Text</type>
</CustomField>