force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Juvenile_Offenses__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Juvenile_Offenses__c</fullName>
    <label>Youth with Juvenile Offenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>