force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Parents_Actively_Serving__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Parents_Actively_Serving__c</fullName>
    <label>Youth with Parents Actively Serving</label>
    <length>11</length>
    <type>Text</type>
</CustomField>