force-app/main/default/objects/Grantee_Report__c/fields/Youth_with_Social_Support_Mentoring__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Social_Support_Mentoring__c</fullName>
    <label>Youth with Social Support Mentoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>