force-app/main/default/objects/Grantee_Report__c/listViews/Ripken_Reports.listView-meta.xml
<ListView>
    <fullName>Ripken_Reports</fullName>
    <columns>NAME</columns>
    <columns>Grant__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>Ripken</value>
    </filters>
    <label>Ripken Reports</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>