force-app/main/default/objects/Grantee_Report__c/listViews/STEM_Reports.listView-meta.xml
<ListView>
    <fullName>STEM_Reports</fullName>
    <columns>NAME</columns>
    <columns>Grant__c</columns>
    <columns>Organization__c</columns>
    <columns>Report_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>STEM</value>
    </filters>
    <label>STEM Reports</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>